--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +14,23 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.27",
     "concurrently": "^8.2.2",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
+  },
+  "lint-staged": {
+    "*.{ts, tsx, js, jsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add ."
+    ],
+    "*.{cjs, mjs, md, json, scss, css}": [
+      "prettier --write"
+    ]
   }
 }
