leetcode: "9. Palindrome Number" done

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
+    "testf": "sh test.sh",
     "prepare": "husky"
   },
   "keywords": [],
