--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "leecode",
+  "name": "leetcode",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "testf": "sh test.sh",
     "prepare": "husky"
   },
   "keywords": [],
